tests/paczka2/big_fuzzy/27952512.err
Error in line 16: TRgPxzVf6K S306 396,3
Error in line 18: sAqe6 S306 23,8
Error in line 23: TRgPxzVf6K A869 -6,1
Error in line 32: TRgPxzVf6K A869 408,9
Error in line 40: 7lKHv972L A869 30,3
Error in line 36: TRgPxzVf6K S437 62,3
Error in line 56: uZwQ70b1w S606 14,2
Error in line 51: TRgPxzVf6K S306 99,4
Error in line 63: TRgPxzVf6K S606 3,6
Error in line 62: uZwQ70b1w S437 94,4
Error in line 69: 7lKHv972L S306 47,7
Error in line 67: TRgPxzVf6K A869 76,6
Error in line 74: ?TRgPxzVf%K
Error in line 73: TRgPxzVf6K S306 87,0
Error in line 78: TRgPxzVf6K A869 90,3
Error in line 82: TRgPxzVf6K S606 78,8
Error in line 81: y4z S306 15,2
Error in line 83: TRgPxzVf6K S437 38,2
Error in line 85: TRgPxzVf6K S306 51,9
Error in line 95: y4z S437 95,5
Error in line 103: uZwQ70b1w S606 282,4
Error in line 117: JH9OGVad5c S606 82,9
Error in line 108: 7lKHv972L S306 62,9
Error in line 122: sAqe6 A869 46,4
Error in line 121: 7lKHv972L S437 9,7
Error in line 126: 7lKHv972L S437 66,1
Error in line 113: TRgPxzVf6K S437 14,1
Error in line 150: S437 S606 59,3
Error in line 164: S437 A869 81,0
Error in line 174: y4z S437 76,7
Error in line 181: uZwQ70b1w S306 53,1
Error in line 189: uZwQ70b1w A869 48,8
Error in line 205: JH9OGVad5c A869 27,4
Error in line 199: TRgPxzVf6K S606 92,2
Error in line 217: JH9OGVad5c S437 25,99
Error in line 222: uZwQ70b1w S437 51,1
Error in line 228: y4z S606 90,1
Error in line 227: JH9OGVad5c S437 105,7
Error in line 233: JH9OGVad5c S606 23,5
Error in line 231: TRgPxzVf6K S606 42,2
Error in line 234: JH9OGVad5c S437 67,6
Error in line 236: TRgPxzVf6K S306 12,6
Error in line 241: TRgPxzVf6K S606 73,0
Error in line 248: TRgPxzVf6K S306 98,2
